[package]
name = "just-a-tag"
version = "0.1.1"
description = "A #tag-type, RFC 1035 DNS label compatible"
authors = ["Markus Mayer"]
homepage = "https://github.com/sunsided/just-a-tag"
repository = "https://github.com/sunsided/just-a-tag"
keywords = ["tags", "labels", "rfc1035", "serde"]
categories = ["encoding", "value-formatting"]
license = "EUPL-1.2"
readme = "README.md"
edition = "2021"

[features]
unsafe = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.171", optional = true }

[dev-dependencies]
serde_json = "1.0.103"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
